cmake_minimum_required(VERSION 3.16)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)


add_executable(199.remote 199.binary-tree-right-side-view.cpp)
add_executable(200.remote 200.number-of-islands)
add_executable(581 ./581.shortest-unsorted-continuous-subarray.cpp)
add_executable(470 ./470.implement-rand10-using-rand7.cpp)